tests/ui/issues/issue-17994.rs
trait Tr {}
type Huh<T> where T: Tr = isize; //~ ERROR type parameter `T` is never used
fn main() {}
